fix: layout tab模式 scrollbar

--- a/package/assets/scss/layout.scss
+++ b/package/assets/scss/layout.scss
@@ -32,7 +32,6 @@
       @apply pl-14;
       @apply relative;
       .title {
-        width: 33%;
         @apply flex;
       }
     }
