--- a/package/assets/scss/tabs.scss
+++ b/package/assets/scss/tabs.scss
@@ -17,8 +17,7 @@
 
   &.layoutMode {
     height: 45px;
-    max-width: 1440px;
-    margin: 0 auto;
+    margin:0 auto;
     overflow: hidden;
     padding-bottom: 10px;
   }
